# wc_2026_quiniela

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/: aws_notes.md
src/: odds_io_utils.py  run_pipeline.py
